--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Ecomeal</string>
     <string name="ecomeal">Ecomeal</string>
+    <string name="addresses">Addresses</string>
 </resources>
